--- a/.travis.yml
+++ b/.travis.yml
@@ -55,14 +55,14 @@ script:
     xcodebuild -workspace ios/tests.xcworkspace -scheme tests CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO
             | sed -e "s/export PATH=[^ ]*/export PATH=.../g"
             | sed -e "s/[^ ]*\/clang /clang /g"
-            | sed -e "s/\(-[IWfFL]\)[^ ]*/\1... /g"
-            | sed -e "s/-isystem [^ ]*/-isystem .../g"
-            | sed -e "s/-include [^ ]*/-include .../g"
-            | sed -e "s/-MF [^ ]*/-MF .../g"
-            | sed -e "s/--serialize-diagnostics [^ ]*/--serialize-diagnostics .../g"
-            | sed -e "s/-o [^ ]*/-o .../g"
-            | sed -e "s/-iquote [^ ]*/-iquote .../g"
-            | sed -e "s/-isysroot [^ ]*/-isysroot .../g";
+            | sed -e "s/\(-[IWfFL]\)[^ ]*/% /g"
+            | sed -e "s/-isystem [^ ]*/%/g"
+            | sed -e "s/-include [^ ]*/%/g"
+            | sed -e "s/-MF [^ ]*/%/g"
+            | sed -e "s/--serialize-diagnostics [^ ]*/%/g"
+            | sed -e "s/-o [^ ]*/%/g"
+            | sed -e "s/-iquote [^ ]*/%/g"
+            | sed -e "s/-isysroot [^ ]*/%/g";
   fi
 
 before_deploy:
