--- a/cocoapods/libmordavokne.podspec.in
+++ b/cocoapods/libmordavokne.podspec.in
@@ -21,6 +21,7 @@ Pod::Spec.new do |s|
   s.frameworks = 'GLKit'
 
   s.dependency 'libutki', '>= 1.0.22'
+  s.dependency 'libnitki', '>= 1.0.14'
   s.dependency 'libmorda', '>= 0.5.7'
   s.dependency 'libpapki', '>= 1.0.11'
   s.dependency 'libkolme', '>= 1.0.6'
