--- a/debian/control.in
+++ b/debian/control.in
@@ -30,7 +30,7 @@ Description: libmordavokne debugging symbols
 
 Package: libmordavokne-dev
 Section: libdevel
-Architecture: all
+Architecture: any
 Depends: libmordavokne$(soname) (= ${binary:Version}), libmordavokne$(soname)-dbg (= ${binary:Version}), ${misc:Depends},
 		libutki-dev, libmorda-dev, libpapki-dev
 Suggests: libmordavokne-doc
