--- a/travis_bintray_ubu.json.in
+++ b/travis_bintray_ubu.json.in
@@ -1,7 +1,7 @@
 {
 	"package": {
 		"name": "libmordavokne",
-		"repo": "rasp",
+		"repo": "ubu",
 		"subject": "igagis"
 	},
 	
@@ -11,7 +11,7 @@
 
 	"files": [
 		{
-			"includePattern": "/srv/chroot/rasp-armhf/(.[^/]*(\\.deb)$)",
+			"includePattern": "../(.[^/]*(\\.deb)$)",
 			"uploadPattern": "$1",
 			"matrixParams": {
 				"deb_distribution": "unstable",
