--- a/.travis.yml
+++ b/.travis.yml
@@ -172,7 +172,7 @@ deploy:
   dry-run: false
 - provider: script
   skip_cleanup: true
-  script: prorab-deploy-homebrew.sh igagis/tap
+  script: prorab-deploy-homebrew.sh -t igagis/tap
   on:
     tags: true
     condition: $BUILD_NAME = macosx
