--- a/debian/control.in
+++ b/debian/control.in
@@ -4,7 +4,9 @@ Priority: extra
 Maintainer: Ivan Gagis <igagis@gmail.com>
 Build-Depends: debhelper (>= 9), prorab,
 		libutki-dev, libpapki-dev, libmorda-dev, libkolme-dev, libstob-dev,
-		libglew-dev, libnitki-dev, libmorda-opengl2-ren-dev,
+		libglew-dev, libnitki-dev,
+		libmorda-opengl2-ren-dev,
+		libmorda-opengles2-ren-dev
 		libegl1-mesa-dev
 Build-Depends-Indep: doxygen
 Standards-Version: 3.9.5
