--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ before_install:
 - if [ "$BUILD_NAME" == "macosx" ]; then
     brew tap igagis/tap &&
     brew update > /dev/null &&
-    brew install prorab libutki libpapki glew libmorda libkolme libstob libnitki;
+    brew install prorab libutki libpapki glew libmorda libkolme libstob libnitki libmorda-opengl2-ren;
   fi
 - if [ "$BUILD_NAME" == "ios" ]; then
     brew tap igagis/tap &&
