--- a/cocoapods/libmordavokne.podspec.in
+++ b/cocoapods/libmordavokne.podspec.in
@@ -25,4 +25,5 @@ Pod::Spec.new do |s|
   s.dependency 'libmorda', '>= 0.5.7'
   s.dependency 'libpapki', '>= 1.0.11'
   s.dependency 'libkolme', '>= 1.0.6'
+  s.dependency 'libmorda-opengles2-ren', '>= 0.1.5'
 end
