--- a/ios/Podfile
+++ b/ios/Podfile
@@ -6,6 +6,6 @@ target "tests" do
 	pod 'libpapki', '>= 1.0.3'
 	pod 'libkolme', '>= 1.0.1'
 	pod 'libstob', '>= 3.1.1'
-	pod 'libaika', '>= 1.0.2'
 	pod 'libmorda', '>= 0.4.4'
+	pod 'libmorda-opengles2-ren', '>= 0.1.5'
 end
