--- a/msvs_solution/tests/packages.config
+++ b/msvs_solution/tests/packages.config
@@ -8,6 +8,7 @@
   <package id="libjpeg.redist" version="9.2.0.1" targetFramework="native" />
   <package id="libkolme" version="1.0.8" targetFramework="native" />
   <package id="libmorda" version="0.5.28" targetFramework="native" />
+  <package id="libmorda-opengl2-ren" version="0.1.4" targetFramework="native" />
   <package id="libnitki" version="1.0.15" targetFramework="native" />
   <package id="libpapki" version="1.0.30" targetFramework="native" />
   <package id="libpng" version="1.6.28.1" targetFramework="native" />
