--- a/msvs_solution/tests/tests.vcxproj
+++ b/msvs_solution/tests/tests.vcxproj
@@ -180,6 +180,7 @@
     <Import Project="..\packages\cairo_static.1.15.4.1\build\native\cairo_static.targets" Condition="Exists('..\packages\cairo_static.1.15.4.1\build\native\cairo_static.targets')" />
     <Import Project="..\packages\libsvgren.0.4.6\build\native\libsvgren.targets" Condition="Exists('..\packages\libsvgren.0.4.6\build\native\libsvgren.targets')" />
     <Import Project="..\packages\libmorda.0.5.28\build\native\libmorda.targets" Condition="Exists('..\packages\libmorda.0.5.28\build\native\libmorda.targets')" />
+    <Import Project="..\packages\libmorda-opengl2-ren.0.1.4\build\native\libmorda-opengl2-ren.targets" Condition="Exists('..\packages\libmorda-opengl2-ren.0.1.4\build\native\libmorda-opengl2-ren.targets')" />
   </ImportGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
@@ -207,5 +208,6 @@
     <Error Condition="!Exists('..\packages\cairo_static.1.15.4.1\build\native\cairo_static.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\cairo_static.1.15.4.1\build\native\cairo_static.targets'))" />
     <Error Condition="!Exists('..\packages\libsvgren.0.4.6\build\native\libsvgren.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libsvgren.0.4.6\build\native\libsvgren.targets'))" />
     <Error Condition="!Exists('..\packages\libmorda.0.5.28\build\native\libmorda.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libmorda.0.5.28\build\native\libmorda.targets'))" />
+    <Error Condition="!Exists('..\packages\libmorda-opengl2-ren.0.1.4\build\native\libmorda-opengl2-ren.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libmorda-opengl2-ren.0.1.4\build\native\libmorda-opengl2-ren.targets'))" />
   </Target>
 </Project>
