--- a/.travis.yml
+++ b/.travis.yml
@@ -51,6 +51,7 @@ before_install:
     rvm use ruby-2.2.2 &&
     
     sudo gem install cocoapods &&
+    rvm 2.2.1 do gem install cocoapods &&
     pod repo add --silent igagis https://$PRORAB_GIT_USERNAME:$PRORAB_GIT_ACCESS_TOKEN@github.com/igagis/cocoapods-repo.git &&
     pod install --project-directory=ios;
   fi
