--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -24,7 +24,7 @@ model {
             platformVersion = 21
             moduleName = 'mordavone-tests'
             toolchain = 'clang'
-            stl = 'c++_shared'
+            stl = 'c++_static'
             cppFlags.add("-std=c++11")
             cppFlags.add("-fexceptions")
             cppFlags.add("-frtti")
@@ -129,5 +129,20 @@ build.dependsOn('extractNDKLibs')
 tasks.whenTaskAdded { task ->
     if (task.name.startsWith('compile')) {
         task.dependsOn('extractNDKLibs')
+    }
+}
+
+task copyResToAssets {
+    doLast {
+        copy{
+            from "../../tests/app/res"
+            into "src/main/assets/res"
+            include "**/*"
+        }
+    }
+}
+tasks.whenTaskAdded { task ->
+    if (task.name.startsWith('generate')) {
+        task.dependsOn('copyResToAssets')
     }
 }
