--- a/android/libmordavokne/build.gradle
+++ b/android/libmordavokne/build.gradle
@@ -50,6 +50,19 @@ model {
                 ldFlags.add("-L" + projectDir.getAbsolutePath() + "/build/ndkLibs/mips64")
             }
         }
+        buildTypes {
+            release {
+                ndk {
+                    debuggable true
+                }
+            }
+            debug{
+                ndk {
+                    debuggable true
+                    cppFlags.add("-DDEBUG")
+                }
+            }
+        }
     }
 
     android.lintOptions {
