--- a/android/libmordavokne/src/main/AndroidManifest.xml
+++ b/android/libmordavokne/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
             android:configChanges="orientation|keyboardHidden"
             android:theme="@android:style/Theme.NoTitleBar"
             android:hasCode="true"
-            android:windowSoftInputMode="adjustResize"
+            android:windowSoftInputMode="adjustNothing"
             >
             <meta-data
                 android:name="android.app.lib_name"
