--- a/nuget/nuget.autopkg.in
+++ b/nuget/nuget.autopkg.in
@@ -20,6 +20,7 @@ nuget{
 		packages : {
 			libkolme/1.0.6;
 			libmorda/0.5.4;
+			libmorda-opengl2-ren/0.1.7;
 			glew.v140/1.12.0;
 			libpapki/1.0.15;
 			libpogodi/1.0.10;
