--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,7 +23,7 @@ model {
         ndk {
             platformVersion = 21
             moduleName = 'mordavokneapp'
-//            toolchain = 'clang'
+            toolchain = 'clang'
             stl = 'c++_shared'
             cppFlags.add("-std=c++11")
             cppFlags.add("-fexceptions")
@@ -36,7 +36,7 @@ model {
                            'png', 'jpeg', 'GLESv2', 'z', 'freetype2', 'svgren', 'svgdom',
                            'mikroxml', 'unikod', 'cairo', 'pixman', 'c++'])
             // build a default combined apk including all ABIs.
-            // abiFilters.addAll(['x86'])
+            abiFilters.addAll(['armeabi', 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64', 'mips', 'mips64']) //this is default
         }
         abis {
             create("armeabi") {
