--- a/android/libmordavokne/build.gradle
+++ b/android/libmordavokne/build.gradle
@@ -15,7 +15,7 @@ model {
         ndk {
             platformVersion = 21
             moduleName = "mordavokne"
-//            toolchain = 'clang'
+            toolchain = 'clang'
             abiFilters.addAll(['armeabi', 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64', 'mips', 'mips64']) //this is default
             ldLibs.addAll(['android', 'log', 'stob', 'EGL', 'nitki', 'morda-opengles2-ren',
                             'morda', 'papki',
