--- a/android/libmordavokne/build.gradle
+++ b/android/libmordavokne/build.gradle
@@ -17,8 +17,8 @@ model {
             moduleName = "mordavokne"
             toolchain = 'clang'
             abiFilters.addAll(['armeabi', 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64', 'mips', 'mips64']) //this is default
-            ldLibs.addAll(['android', 'log', 'stob', 'EGL', 'nitki', 'morda-opengles2-ren',
-                            'morda', 'papki',
+            ldLibs.addAll(['android', 'log', 'EGL', 'nitki', 'morda-opengles2-ren',
+                            'morda', 'stob', 'papki',
                             'png', 'jpeg', 'GLESv2', 'z', 'freetype2',
                             'svgren', 'svgdom', 'cairo', 'pixman', 'mikroxml', 'unikod', 'c++'])
             stl = 'c++_shared'
