--- a/debian/control.in
+++ b/debian/control.in
@@ -2,7 +2,7 @@ Source: libmordavokne
 Section: libs
 Priority: extra
 Maintainer: Ivan Gagis <igagis@gmail.com>
-Build-Depends: debhelper (>= 9), prorab,
+Build-Depends: debhelper (>= 9), prorab, prorab-extra, myci,
 		libutki-dev, libpapki-dev, libmorda-dev, libkolme-dev, libstob-dev,
 		libglew-dev, libnitki-dev,
 		libmorda-opengl2-ren-dev,
