--- a/.travis.yml
+++ b/.travis.yml
@@ -58,6 +58,7 @@ env:
 
 before_install:
 - if [ "$BUILD_NAME" == "macosx" ]; then
+    echo rvm_autoupdate_flag=2 >> ~/.rvmrc &&
     rvm install ruby-2.3.3 &&
     rvm use ruby-2.3.3 &&
     
