--- a/msvs_solution/tests/packages.config
+++ b/msvs_solution/tests/packages.config
@@ -1,26 +1,23 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="cairo_static" version="1.15.4.2" targetFramework="native" />
-  <package id="freetype" version="2.8.0.1" targetFramework="native" />
-  <package id="freetype.redist" version="2.8.0.1" targetFramework="native" />
+  <package id="cairo_static" version="1.15.4.5" targetFramework="native" />
+  <package id="freetype_static" version="2.10.1.3" targetFramework="native" />
   <package id="glew.v140" version="1.12.0" targetFramework="native" />
-  <package id="libjpeg_static" version="6.1.1.2" targetFramework="native" />
-  <package id="libkolme" version="1.0.13" targetFramework="native" />
-  <package id="libmikroxml" version="0.1.9" targetFramework="native" />
-  <package id="libmorda" version="0.5.87" targetFramework="native" />
-  <package id="libmorda-opengl2-ren" version="0.1.17" targetFramework="native" />
-  <package id="libnitki" version="1.0.19" targetFramework="native" />
-  <package id="libpapki" version="1.0.49" targetFramework="native" />
-  <package id="libpng_native" version="1.6.30" targetFramework="native" />
-  <package id="libpng_native.redist" version="1.6.30" targetFramework="native" />
-  <package id="libpogodi" version="1.0.20" targetFramework="native" />
-  <package id="libstob" version="3.3.21" targetFramework="native" />
-  <package id="libsvgdom" version="0.3.22" targetFramework="native" />
-  <package id="libsvgren" version="0.4.57" targetFramework="native" />
-  <package id="libunikod" version="2.0.24" targetFramework="native" />
-  <package id="libutki" version="1.1.25" targetFramework="native" />
-  <package id="pixman_static" version="0.32.4.5" targetFramework="native" />
-  <package id="pugixml" version="1.9.0" targetFramework="native" />
-  <package id="zlib_native" version="1.2.11" targetFramework="native" />
-  <package id="zlib_native.redist" version="1.2.11" targetFramework="native" />
+  <package id="libjpeg_static" version="6.1.1.6" targetFramework="native" />
+  <package id="libmikroxml" version="0.1.16" targetFramework="native" />
+  <package id="libmorda" version="0.5.96" targetFramework="native" />
+  <package id="libmorda-opengl2-ren" version="0.1.24" targetFramework="native" />
+  <package id="libnitki" version="1.0.25" targetFramework="native" />
+  <package id="libpapki" version="1.0.61" targetFramework="native" />
+  <package id="libpng_static" version="1.4.1.6" targetFramework="native" />
+  <package id="libpogodi" version="1.0.30" targetFramework="native" />
+  <package id="libsvgdom" version="0.3.29" targetFramework="native" />
+  <package id="libsvgren" version="0.4.62" targetFramework="native" />
+  <package id="libunikod" version="2.0.36" targetFramework="native" />
+  <package id="libutki" version="1.1.41" targetFramework="native" />
+  <package id="pixman_static" version="0.32.4.7" targetFramework="native" />
+  <package id="pugixml" version="1.10.0" targetFramework="native" />
+  <package id="puu" version="0.1.4" targetFramework="native" />
+  <package id="r4" version="1.0.18" targetFramework="native" />
+  <package id="zlib_static" version="1.2.11.4" targetFramework="native" />
 </packages>
