--- a/msvs_solution/tests/tests.vcxproj
+++ b/msvs_solution/tests/tests.vcxproj
@@ -289,55 +289,49 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="..\packages\glew.v140.1.12.0\build\native\glew.v140.targets" Condition="Exists('..\packages\glew.v140.1.12.0\build\native\glew.v140.targets')" />
-    <Import Project="..\packages\freetype.redist.2.8.0.1\build\native\freetype.redist.targets" Condition="Exists('..\packages\freetype.redist.2.8.0.1\build\native\freetype.redist.targets')" />
-    <Import Project="..\packages\freetype.2.8.0.1\build\native\freetype.targets" Condition="Exists('..\packages\freetype.2.8.0.1\build\native\freetype.targets')" />
-    <Import Project="..\packages\pugixml.1.9.0\build\native\pugixml.targets" Condition="Exists('..\packages\pugixml.1.9.0\build\native\pugixml.targets')" />
-    <Import Project="..\packages\libjpeg_static.6.1.1.2\build\native\libjpeg_static.targets" Condition="Exists('..\packages\libjpeg_static.6.1.1.2\build\native\libjpeg_static.targets')" />
-    <Import Project="..\packages\libpng_native.redist.1.6.30\build\native\libpng_native.redist.targets" Condition="Exists('..\packages\libpng_native.redist.1.6.30\build\native\libpng_native.redist.targets')" />
-    <Import Project="..\packages\libutki.1.1.25\build\native\libutki.targets" Condition="Exists('..\packages\libutki.1.1.25\build\native\libutki.targets')" />
-    <Import Project="..\packages\libkolme.1.0.13\build\native\libkolme.targets" Condition="Exists('..\packages\libkolme.1.0.13\build\native\libkolme.targets')" />
-    <Import Project="..\packages\libpapki.1.0.49\build\native\libpapki.targets" Condition="Exists('..\packages\libpapki.1.0.49\build\native\libpapki.targets')" />
-    <Import Project="..\packages\libpogodi.1.0.20\build\native\libpogodi.targets" Condition="Exists('..\packages\libpogodi.1.0.20\build\native\libpogodi.targets')" />
-    <Import Project="..\packages\libnitki.1.0.19\build\native\libnitki.targets" Condition="Exists('..\packages\libnitki.1.0.19\build\native\libnitki.targets')" />
-    <Import Project="..\packages\libunikod.2.0.24\build\native\libunikod.targets" Condition="Exists('..\packages\libunikod.2.0.24\build\native\libunikod.targets')" />
-    <Import Project="..\packages\libmikroxml.0.1.9\build\native\libmikroxml.targets" Condition="Exists('..\packages\libmikroxml.0.1.9\build\native\libmikroxml.targets')" />
-    <Import Project="..\packages\libstob.3.3.21\build\native\libstob.targets" Condition="Exists('..\packages\libstob.3.3.21\build\native\libstob.targets')" />
-    <Import Project="..\packages\libsvgdom.0.3.22\build\native\libsvgdom.targets" Condition="Exists('..\packages\libsvgdom.0.3.22\build\native\libsvgdom.targets')" />
-    <Import Project="..\packages\pixman_static.0.32.4.5\build\native\pixman_static.targets" Condition="Exists('..\packages\pixman_static.0.32.4.5\build\native\pixman_static.targets')" />
-    <Import Project="..\packages\zlib_native.redist.1.2.11\build\native\zlib_native.redist.targets" Condition="Exists('..\packages\zlib_native.redist.1.2.11\build\native\zlib_native.redist.targets')" />
-    <Import Project="..\packages\libpng_native.1.6.30\build\native\libpng_native.targets" Condition="Exists('..\packages\libpng_native.1.6.30\build\native\libpng_native.targets')" />
-    <Import Project="..\packages\zlib_native.1.2.11\build\native\zlib_native.targets" Condition="Exists('..\packages\zlib_native.1.2.11\build\native\zlib_native.targets')" />
-    <Import Project="..\packages\cairo_static.1.15.4.2\build\native\cairo_static.targets" Condition="Exists('..\packages\cairo_static.1.15.4.2\build\native\cairo_static.targets')" />
-    <Import Project="..\packages\libsvgren.0.4.57\build\native\libsvgren.targets" Condition="Exists('..\packages\libsvgren.0.4.57\build\native\libsvgren.targets')" />
-    <Import Project="..\packages\libmorda-opengl2-ren.0.1.17\build\native\libmorda-opengl2-ren.targets" Condition="Exists('..\packages\libmorda-opengl2-ren.0.1.17\build\native\libmorda-opengl2-ren.targets')" />
-    <Import Project="..\packages\libmorda.0.5.87\build\native\libmorda.targets" Condition="Exists('..\packages\libmorda.0.5.87\build\native\libmorda.targets')" />
+    <Import Project="..\packages\libjpeg_static.6.1.1.6\build\native\libjpeg_static.targets" Condition="Exists('..\packages\libjpeg_static.6.1.1.6\build\native\libjpeg_static.targets')" />
+    <Import Project="..\packages\libutki.1.1.41\build\native\libutki.targets" Condition="Exists('..\packages\libutki.1.1.41\build\native\libutki.targets')" />
+    <Import Project="..\packages\libpapki.1.0.61\build\native\libpapki.targets" Condition="Exists('..\packages\libpapki.1.0.61\build\native\libpapki.targets')" />
+    <Import Project="..\packages\libpogodi.1.0.30\build\native\libpogodi.targets" Condition="Exists('..\packages\libpogodi.1.0.30\build\native\libpogodi.targets')" />
+    <Import Project="..\packages\libnitki.1.0.25\build\native\libnitki.targets" Condition="Exists('..\packages\libnitki.1.0.25\build\native\libnitki.targets')" />
+    <Import Project="..\packages\libunikod.2.0.36\build\native\libunikod.targets" Condition="Exists('..\packages\libunikod.2.0.36\build\native\libunikod.targets')" />
+    <Import Project="..\packages\libmikroxml.0.1.16\build\native\libmikroxml.targets" Condition="Exists('..\packages\libmikroxml.0.1.16\build\native\libmikroxml.targets')" />
+    <Import Project="..\packages\libsvgdom.0.3.29\build\native\libsvgdom.targets" Condition="Exists('..\packages\libsvgdom.0.3.29\build\native\libsvgdom.targets')" />
+    <Import Project="..\packages\pixman_static.0.32.4.7\build\native\pixman_static.targets" Condition="Exists('..\packages\pixman_static.0.32.4.7\build\native\pixman_static.targets')" />
+    <Import Project="..\packages\pugixml.1.10.0\build\native\pugixml.targets" Condition="Exists('..\packages\pugixml.1.10.0\build\native\pugixml.targets')" />
+    <Import Project="..\packages\cairo_static.1.15.4.5\build\native\cairo_static.targets" Condition="Exists('..\packages\cairo_static.1.15.4.5\build\native\cairo_static.targets')" />
+    <Import Project="..\packages\libsvgren.0.4.62\build\native\libsvgren.targets" Condition="Exists('..\packages\libsvgren.0.4.62\build\native\libsvgren.targets')" />
+    <Import Project="..\packages\libmorda.0.5.96\build\native\libmorda.targets" Condition="Exists('..\packages\libmorda.0.5.96\build\native\libmorda.targets')" />
+    <Import Project="..\packages\freetype_static.2.10.1.3\build\native\freetype_static.targets" Condition="Exists('..\packages\freetype_static.2.10.1.3\build\native\freetype_static.targets')" />
+    <Import Project="..\packages\puu.0.1.4\build\native\puu.targets" Condition="Exists('..\packages\puu.0.1.4\build\native\puu.targets')" />
+    <Import Project="..\packages\r4.1.0.18\build\native\r4.targets" Condition="Exists('..\packages\r4.1.0.18\build\native\r4.targets')" />
+    <Import Project="..\packages\zlib_static.1.2.11.4\build\native\zlib_static.targets" Condition="Exists('..\packages\zlib_static.1.2.11.4\build\native\zlib_static.targets')" />
+    <Import Project="..\packages\libpng_static.1.4.1.6\build\native\libpng_static.targets" Condition="Exists('..\packages\libpng_static.1.4.1.6\build\native\libpng_static.targets')" />
+    <Import Project="..\packages\libmorda-opengl2-ren.0.1.24\build\native\libmorda-opengl2-ren.targets" Condition="Exists('..\packages\libmorda-opengl2-ren.0.1.24\build\native\libmorda-opengl2-ren.targets')" />
   </ImportGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('..\packages\glew.v140.1.12.0\build\native\glew.v140.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\glew.v140.1.12.0\build\native\glew.v140.targets'))" />
-    <Error Condition="!Exists('..\packages\freetype.redist.2.8.0.1\build\native\freetype.redist.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\freetype.redist.2.8.0.1\build\native\freetype.redist.targets'))" />
-    <Error Condition="!Exists('..\packages\freetype.2.8.0.1\build\native\freetype.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\freetype.2.8.0.1\build\native\freetype.targets'))" />
-    <Error Condition="!Exists('..\packages\pugixml.1.9.0\build\native\pugixml.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\pugixml.1.9.0\build\native\pugixml.targets'))" />
-    <Error Condition="!Exists('..\packages\libjpeg_static.6.1.1.2\build\native\libjpeg_static.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libjpeg_static.6.1.1.2\build\native\libjpeg_static.targets'))" />
-    <Error Condition="!Exists('..\packages\libpng_native.redist.1.6.30\build\native\libpng_native.redist.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpng_native.redist.1.6.30\build\native\libpng_native.redist.targets'))" />
-    <Error Condition="!Exists('..\packages\libutki.1.1.25\build\native\libutki.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libutki.1.1.25\build\native\libutki.targets'))" />
-    <Error Condition="!Exists('..\packages\libkolme.1.0.13\build\native\libkolme.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libkolme.1.0.13\build\native\libkolme.targets'))" />
-    <Error Condition="!Exists('..\packages\libpapki.1.0.49\build\native\libpapki.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpapki.1.0.49\build\native\libpapki.targets'))" />
-    <Error Condition="!Exists('..\packages\libpogodi.1.0.20\build\native\libpogodi.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpogodi.1.0.20\build\native\libpogodi.targets'))" />
-    <Error Condition="!Exists('..\packages\libnitki.1.0.19\build\native\libnitki.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libnitki.1.0.19\build\native\libnitki.targets'))" />
-    <Error Condition="!Exists('..\packages\libunikod.2.0.24\build\native\libunikod.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libunikod.2.0.24\build\native\libunikod.targets'))" />
-    <Error Condition="!Exists('..\packages\libmikroxml.0.1.9\build\native\libmikroxml.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libmikroxml.0.1.9\build\native\libmikroxml.targets'))" />
-    <Error Condition="!Exists('..\packages\libstob.3.3.21\build\native\libstob.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libstob.3.3.21\build\native\libstob.targets'))" />
-    <Error Condition="!Exists('..\packages\libsvgdom.0.3.22\build\native\libsvgdom.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libsvgdom.0.3.22\build\native\libsvgdom.targets'))" />
-    <Error Condition="!Exists('..\packages\pixman_static.0.32.4.5\build\native\pixman_static.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\pixman_static.0.32.4.5\build\native\pixman_static.targets'))" />
-    <Error Condition="!Exists('..\packages\zlib_native.redist.1.2.11\build\native\zlib_native.redist.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\zlib_native.redist.1.2.11\build\native\zlib_native.redist.targets'))" />
-    <Error Condition="!Exists('..\packages\libpng_native.1.6.30\build\native\libpng_native.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpng_native.1.6.30\build\native\libpng_native.targets'))" />
-    <Error Condition="!Exists('..\packages\zlib_native.1.2.11\build\native\zlib_native.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\zlib_native.1.2.11\build\native\zlib_native.targets'))" />
-    <Error Condition="!Exists('..\packages\cairo_static.1.15.4.2\build\native\cairo_static.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\cairo_static.1.15.4.2\build\native\cairo_static.targets'))" />
-    <Error Condition="!Exists('..\packages\libsvgren.0.4.57\build\native\libsvgren.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libsvgren.0.4.57\build\native\libsvgren.targets'))" />
-    <Error Condition="!Exists('..\packages\libmorda-opengl2-ren.0.1.17\build\native\libmorda-opengl2-ren.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libmorda-opengl2-ren.0.1.17\build\native\libmorda-opengl2-ren.targets'))" />
-    <Error Condition="!Exists('..\packages\libmorda.0.5.87\build\native\libmorda.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libmorda.0.5.87\build\native\libmorda.targets'))" />
+    <Error Condition="!Exists('..\packages\libjpeg_static.6.1.1.6\build\native\libjpeg_static.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libjpeg_static.6.1.1.6\build\native\libjpeg_static.targets'))" />
+    <Error Condition="!Exists('..\packages\libutki.1.1.41\build\native\libutki.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libutki.1.1.41\build\native\libutki.targets'))" />
+    <Error Condition="!Exists('..\packages\libpapki.1.0.61\build\native\libpapki.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpapki.1.0.61\build\native\libpapki.targets'))" />
+    <Error Condition="!Exists('..\packages\libpogodi.1.0.30\build\native\libpogodi.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpogodi.1.0.30\build\native\libpogodi.targets'))" />
+    <Error Condition="!Exists('..\packages\libnitki.1.0.25\build\native\libnitki.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libnitki.1.0.25\build\native\libnitki.targets'))" />
+    <Error Condition="!Exists('..\packages\libunikod.2.0.36\build\native\libunikod.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libunikod.2.0.36\build\native\libunikod.targets'))" />
+    <Error Condition="!Exists('..\packages\libmikroxml.0.1.16\build\native\libmikroxml.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libmikroxml.0.1.16\build\native\libmikroxml.targets'))" />
+    <Error Condition="!Exists('..\packages\libsvgdom.0.3.29\build\native\libsvgdom.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libsvgdom.0.3.29\build\native\libsvgdom.targets'))" />
+    <Error Condition="!Exists('..\packages\pixman_static.0.32.4.7\build\native\pixman_static.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\pixman_static.0.32.4.7\build\native\pixman_static.targets'))" />
+    <Error Condition="!Exists('..\packages\pugixml.1.10.0\build\native\pugixml.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\pugixml.1.10.0\build\native\pugixml.targets'))" />
+    <Error Condition="!Exists('..\packages\cairo_static.1.15.4.5\build\native\cairo_static.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\cairo_static.1.15.4.5\build\native\cairo_static.targets'))" />
+    <Error Condition="!Exists('..\packages\libsvgren.0.4.62\build\native\libsvgren.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libsvgren.0.4.62\build\native\libsvgren.targets'))" />
+    <Error Condition="!Exists('..\packages\libmorda.0.5.96\build\native\libmorda.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libmorda.0.5.96\build\native\libmorda.targets'))" />
+    <Error Condition="!Exists('..\packages\freetype_static.2.10.1.3\build\native\freetype_static.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\freetype_static.2.10.1.3\build\native\freetype_static.targets'))" />
+    <Error Condition="!Exists('..\packages\puu.0.1.4\build\native\puu.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\puu.0.1.4\build\native\puu.targets'))" />
+    <Error Condition="!Exists('..\packages\r4.1.0.18\build\native\r4.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\r4.1.0.18\build\native\r4.targets'))" />
+    <Error Condition="!Exists('..\packages\zlib_static.1.2.11.4\build\native\zlib_static.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\zlib_static.1.2.11.4\build\native\zlib_static.targets'))" />
+    <Error Condition="!Exists('..\packages\libpng_static.1.4.1.6\build\native\libpng_static.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libpng_static.1.4.1.6\build\native\libpng_static.targets'))" />
+    <Error Condition="!Exists('..\packages\libmorda-opengl2-ren.0.1.24\build\native\libmorda-opengl2-ren.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\libmorda-opengl2-ren.0.1.24\build\native\libmorda-opengl2-ren.targets'))" />
   </Target>
 </Project>
